case-3973 - Z-index fixes

--- a/sass/module/_search.scss
+++ b/sass/module/_search.scss
@@ -593,7 +593,6 @@ input#edit-search-block-form--2.spinner {
           .ting-collection-wrapper {
             background-image: url('../images/pw_maze_white.png');
             position: relative;
-            z-index: 30;
             padding: 15px;
           }
         }
